qlcplus (4.13.1) stable; urgency=low

  * engine: fix blackout not working
  * engine: include relative EFX in blackout
  * engine: fix RGB Matrix clone control mode
  * Show Manager: improve resume after pause
  * Virtual Console: fix OSC feedback regression
  * Virtual Console/XY Pad: copy presets when cloning (thanks to Hans-Jürgen Tappe)
  * Plugins/DMX USB: restore Vince DMX512 output (thanks to Jérôme Lebleu)
  * New fixtures: beamZ BAC500 and BAC506 (thanks to Olivier Michel)
  * New fixtures: American DJ Par Z4, beamZ SB400, OXO ColorBeam 7 FCW IR, Pro-Lights Pixie Spot (thanks to Dmitry Kolesnikov)
  * New fixtures: BoomToneDJ LED PAR 7X10W 5in1, Mac Mah FLAT PAR 7x12W 6in1, Eurolite LED PIX-16 QCL Bar (thanks to Cédric Monféfoul)
  * New fixture: Showtec ACT PC 60 RGBW (thanks to Michel Sliepenbeek)

 -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Jun 2024 12:13:14 +0200

qlcplus (4.13.0) stable; urgency=low

  * engine: fix Chaser random startup (thanks to Dennis Suermann)
  * engine: do not fade out looped audio
  * engine: further rework to properly handle 16bit fading
  * engine: fix stopping audio with fade in and fade out while fading in
  * engine: new EFX algorithm: SquareTrue (thanks to Justin Hornsby)
  * engine: handle 'string' and 'float' types in RGB Scripts
  * UI: save the geometry of all the dialogs (thanks to Nils Tijtgat)
  * UI: add color lookup table to input profiles and a dedicated dialog for custom feedback
  * Virtual Console/Slider: fix switching from playback to submaster mode
  * Virtual Console/Slider: fix submaster @0 not affecting function intensity
  * Virtual Console/XY Pad: fix Scene preset controlling wrong channels
  * Virtual Console/Clock: fix running a schedule the day after
  * Virtual Console/Button: Scene flashing can force LTP and override (thanks to Dennis Suermann)
  * Virtual Console/Button: add monitoring feedback value to custom feedback (thanks to ditcheshurt)