@@ -522,6 +522,16 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="m_flashButtonCheck">
+         <property name="text">
+          <string>Flash Button</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="m_flashButtonLayout"/>
+       </item>
+       <item>
         <spacer name="m_playbackSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
