@@ -5,6 +5,7 @@ qlcplus (4.13.1) stable; urgency=low
   * engine: fix RGB Matrix clone control mode
   * Show Manager: improve resume after pause
   * Virtual Console: fix OSC feedback regression
+  * Virtual Console/Slider: add an optional button to flash in playback mode
   * Virtual Console/XY Pad: copy presets when cloning (thanks to Hans-Jürgen Tappe)
   * Plugins/DMX USB: restore Vince DMX512 output (thanks to Jérôme Lebleu)
   * New fixtures: beamZ BAC500 and BAC506 (thanks to Olivier Michel)
